Verif/Test/Invalide/test_erreur_3.87-2.deca
// Description:
//    Programme soulevant l'erreur (3.87)
// Resultats:
//    Erreur contextuelle
//    Ligne 22 : Champ non visible dans ce contexte (règle 3.87)
//
// Attributs: exec correct automatique
//
// Historique:
//    cree le 20/01/2012


class A {   
   protected int x;
}

class B extends A {
   int y() 
   int x;
   A a;
   {
      x = a.x;
   }
}